# prisma

./: CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert
inc/prisma/: application.h  backend.h  component.h  error.h  log.h  renderer.h  style.h  ui.h  window.h
inc/prisma/backend/: commandbuffers.h  commandpool.h  descriptorpool.h  descriptorsetlayout.h  descriptorsets.h  device.h  framebuffers.h  instance.h  pipeline.h  pipelinelayout.h  renderpass.h  shader.h  swapchain.h  sync.h
inc/prisma/backend/buffers/: buffer.h  indexbuffer.h  uniformbuffer.h  vertexbuffer.h
inc/prisma/backend/models/: vertex2d.h
inc/prisma/components/: editor.h  info.h  logger.h  menu.h  viewport.h
shaders/: default.vert
src/prisma/: application.c  backend.c  component.c  error.c  log.c  main.c  renderer.c  style.c  ui.c  window.c
src/prisma/backend/: commandbuffers.c  commandpool.c  descriptorpool.c  descriptorsetlayout.c  descriptorsets.c  device.c  framebuffers.c  instance.c  pipeline.c  pipelinelayout.c  renderpass.c  shader.c  swapchain.c  sync.c
src/prisma/backend/buffers/: buffer.c  indexbuffer.c  uniformbuffer.c  vertexbuffer.c
src/prisma/backend/models/: vertex2d.c
src/prisma/components/: editor.c  info.c  logger.c  menu.c  viewport.c
